# umwelt-info

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
analysis/: fetch.py  regions.py  resources.py
assets/: openapi.yaml
deployment/: harvester-daily.service  harvester-daily.timer  harvester-weekly.service  harvester-weekly.timer  harvester.service  harvester.timer  harvester.toml  indexer.service  postinst  server.service
src/: dataset.rs  geonames.rs  index.rs  lib.rs  metrics.rs  server.rs  umthes.rs
src/dataset/: contact.rs  license.rs  mod.rs  region.rs  resource.rs  tag.rs
src/harvester/: ckan.rs  client.rs  csw.rs  doris_bfs.rs  geo_network_q.rs  manual.rs  mod.rs  smart_finder.rs  stats.rs  wasser_de.rs
src/server/: dataset.rs  filters.rs  metrics.rs  mod.rs  prometheus.rs  search.rs  stats.rs
systemd/: harvester.service  server.service
templates/: csw_get_records.xml  dataset.html  get_records.xml  licenses.rs  metrics.html  search.html  summary.html
vocabulary/: licenses.rdf
