[package]
name = "umwelt-info"
authors = ["Jakob Deller <jakob.deller@uba.de>", "Stefan Krämer <stefan.kraemer@uba.de>", "Adam Reichold <adam.reichold@uba.de>"]
repository = "https://github.com/adamreichold/umwelt-info"
license = "AGPL-3.0"
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
askama = { version = "0.11", default-features = false }
axum = { version = "0.5", default-features = false, features = ["http1", "query", "tower-log"] }
bincode = "1.3"
cap-std = "0.25"
futures-util = { version = "0.3", default-features = false }
once_cell = "1.13"
quick-xml = { version = "0.23", features = ["serialize"] }
rayon = "1.5"
regex = "1.6"
reqwest = { version = "0.11", features = ["json"] }
scraper = { version = "0.13", default-features = false }
serde = { version = "1.0", features = ["derive"] }
tantivy = "0.18"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs"] }
toml = "0.5"
tower-http = { version = "0.3", features = ["trace"] }
tracing = { version = "0.1", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.2", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["test-util"] }
