[package]
name = "umwelt-info"
authors = ["Jakob Deller <jakob.deller@uba.de>", "Stefan Krämer <stefan.kraemer@uba.de>", "Adam Reichold <adam.reichold@uba.de>"]
repository = "https://github.com/adamreichold/umwelt-info"
license = "AGPL-3.0"
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
askama = { version = "0.11", default-features = false, features = ["urlencode"] }
async-compression = { version = "0.3", features = ["tokio", "zstd"] }
axum = { version = "0.5", default-features = false, features = ["http1", "query", "json", "tower-log"] }
bincode = "1.3"
bytes = "1.2"
cap-std = "0.25"
futures-util = { version = "0.3", default-features = false }
once_cell = { version = "1.13", features = ["parking_lot"] }
hashbrown = { version = "0.12", features = ["serde"] }
parking_lot = "0.12"
rayon = "1.5"
regex = "1.6"
reqwest = { version = "0.11", features = ["json"] }
scraper = { version = "0.13", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-roxmltree = "0.3"
tantivy = { version = "0.18", default-features = false, features = ["mmap"] }
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs", "parking_lot"] }
toml = "0.5"
tower = { version = "0.4", features = ["limit", "load-shed"] }
tower-http = { version = "0.3", features = ["trace"] }
tracing = { version = "0.1", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.2", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["test-util"] }

[package.metadata.deb]
maintainer-scripts = "deployment"
assets = [
    ["target/release/harvester", "usr/bin/", "755"],
    ["target/release/indexer", "usr/bin/", "755"],
    ["target/release/server", "usr/bin/", "755"],
    ["deployment/harvester.service", "etc/systemd/system/", "644"],
    ["deployment/harvester.timer", "etc/systemd/system/", "644"],
    ["deployment/indexer.service", "etc/systemd/system/", "644"],
    ["deployment/server.service", "etc/systemd/system/", "644"],
]
